eulogy-derive/tests/ui/unknown_eulogy_key.stderr
error: unknown #[eulogy(...)] key — expected `after` or `skip`
  --> tests/ui/unknown_eulogy_key.rs:11:14
   |
11 |     #[eulogy(bogus = true)]
   |              ^^^^^
